# python_labs

./: .coverage  README.md  out.json  output.json  pyproject.toml  temp_fix.py
python_labs.egg-info/: PKG-INFO  SOURCES.txt
scr/lab01/: ex01.py  ex02.py  ex03.py  ex05.py
src/data/lab04/: input.txt
src/data/samples/: test.txt
src/lab01/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py
src/lab02/: ex01.py  ex02.py  ex03.py  ex04.py  ex05.py  ex06.py  ex07.py
src/lab03/: e11_text.py  ex01.py  ex02.py  ex03.py  ex04.py
src/lab03/lib/: e11_text_stats.py
src/lab04/: ex02.py
src/lab04/c/: io_txt_csv.py  text_report.py
src/lab04/c/lib/: text.py
src/lab05/: csv_json.py  csv_xlsx.py  json_csv.py
src/lab06/: cli_text.py
src/lab07/: exA.py  exB.py
src/lab08/: main.py  models.py  serialize.py  students_output.json
src/lab09/: group.py  main.py  students.csv
src/lab10/: linked_list.py  structures.py
src/lab9/: group.py  main.py  students.csv
src/lib/: text.py
tests/: test_json_csv.py  test_text.py
